--- a/rapport.html
+++ b/rapport.html
@@ -43,11 +43,11 @@
         <span style="font-weight: bold;">temps mis: </span>
     </p>
     <p>
-        <span style="font-weight: bold;">Nom: </span>
+        <span style="font-weight: bold;">Nom: </span>Rima Boujenane
         <br />
-        <span style="font-weight: bold;">Matricule: </span>
+        <span style="font-weight: bold;">Matricule: </span>20235550
         <br />
-        <span style="font-weight: bold;">Courriel: </span>
+        <span style="font-weight: bold;">Courriel: </span>rima.boujenane@umontreal.ca
         <br />
         <span style="font-weight: bold;">temps mis: </span>
     </p>
@@ -84,7 +84,7 @@
                     David Shorten
                 </th>
                 <th>
-                    Nom
+                    Rima Boujenane
                 </th>
                 <th>
                     Nom
