--- a/rapport.html
+++ b/rapport.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFT2255 E24 DM1</title>
     <style type="text/css">
         table
