--- a/rapport.html
+++ b/rapport.html
@@ -194,9 +194,97 @@
         Tâche 3</h2>
         
         <h3>Cas d'utilisation: 1 - S'inscrire comme utilisateur</h3>
+        <p> <b>But</b>: Permettre à un nouvel utilisateur de s'enregistrer sur la plateforme Robotix. <br>
+            <b>Préconditions</b> :  L'utilisateur doit avoir accès à une connexion Internet et une adresse email valide. <br>
+            <b>Acteur principal</b> : Utilisateur. <br>
+        </p>
+        <p><b>Scénario principal</b> :
+            <ol>
+                <li>L'utilisateur accède à la page d'accueil de Robotix et clique sur "S'inscrire".                </li>
+            	<li>Il est redirigé vers le formulaire d'inscription.</li>
+            	<li>L'utilisateur saisit les informations requises :                </li>
+                    <ul>
+                    <li>Prénom</li>
+                    <li>Nom</li>
+                    <li>Pseudo (doit être unique)</li>
+                    <li>Adresse email</li>
+                    <li>Numéro de téléphone</li>
+                    <li>Nom de la compagnie (facultatif)</li>
+                </ul>
+                <li>Il crée un mot de passe sécurisé et le confirme.</li>
+                <li>L'utilisateur accepte les conditions d'utilisation et la politique de confidentialité.</li>
+                <li>L'utilisateur soumet le formulaire.</li>
+                <li>Le système vérifie que toutes les informations sont complètes et valides.</li>
+                <li>Le système enregistre l'utilisateur et envoie un courriel de confirmation à l'adresse fournie.</li>
+                <li>L'utilisateur clique sur le lien de confirmation dans le courriel pour activer son compte.</li>
+                <li>Le système active le compte utilisateur et l'utilisateur reçoit une confirmation de création de compte.</li>
+            </ol>
+            <b>Scénarios alternatifs </b> : <br>
+             <br>7a.   Les informations fournies sont incorrectes, incomplètes, ou déjà prises (comme le pseudo).
+	         <br>7a.1.   Le système affiche un message d'erreur indiquant les champs à corriger.
+             <br>7a.2.   L'utilisateur corrige les informations incorrectes ou incomplètes et soumet à nouveau le formulaire.
+             <br>7a.3.   Si le pseudo est déjà pris, l'utilisateur doit choisir un autre pseudo et soumettre à nouveau le formulaire.            
+             <br>
+             <br>8a.   L'adresse courriel est déjà utilisée.
+             <br>8a.1.   Le système affiche un message d'erreur indiquant que l'adresse courriel est déjà utilisée.
+             <br>8a.2.   L'utilisateur peut choisir de récupérer son compte existant via le lien "Mot de passe oublié”.
+             <br>8a.3.   Si l'utilisateur souhaite utiliser une autre adresse courriel, il la saisit et soumet à nouveau le formulaire.
+             <br>8a.4.   Le système envoie un courriel de confirmation à la nouvelle adresse courriel si elle est valide et non utilisée.
+             <br>
+            <b>Postconditions </b>:L'utilisateur est inscrit, son compte est activé, et il peut se connecter à Robotix.  <br>
+        </p>
 
+
+
+
+
+
+        <br><br>
         <h3>Cas d'utilisation: 2 - Enregistrer un robot</h3>
 
+        <p> <b>But</b>: Permettre à un utilisateur d'ajouter un nouveau robot à sa flotte en l'enregistrant dans le système Robotix.<br>
+            <b>Préconditions</b> : L'utilisateur doit être connecté à Robotix et avoir un robot physique prêt à être enregistré et doit disposer du numéro de série unique du robot fourni par le fabricant.<br>
+            <b>Acteur principal</b> : Utilisateur. <br>
+        </p>
+        <p><b>Scénario principal</b> :
+            <ol>
+                <li>L'utilisateur accède à la section "Mes robots" dans son compte Robotix.</li>
+            	<li>Il clique sur "Ajouter un nouveau robot”.</li>
+            	<li>Le système affiche un formulaire d'enregistrement de robot.</li>
+                <li>L'utilisateur saisit les informations requises :
+                    <ul>
+                    <li>Numéro de série du robot</li>
+                    <li>Nom du robot</li>
+                    <li>Type de robot (par exemple, robot de service, robot industriel, etc.)</li>
+                </ul></li>
+                <li>Il peut ajouter des informations supplémentaires, comme les capacités spécifiques du robot ou son emplacement.</li>
+                <li>L'utilisateur soumet le formulaire./li>
+                <li>Le système vérifie la validité et l'unicité du numéro de série.</li>
+                <li>Le système enregistre le robot dans la flotte de l'utilisateur.</li>
+                <li>Une confirmation d'enregistrement s'affiche et un courriel de confirmation est envoyé à l’utilisateur.</li>
+            </ol>
+            <b>Scénarios alternatifs </b> :<br>
+            <br> 3a.   Le numéro de série est déjà utilisé ou invalide. 
+            <br>3a.1.   Le système affiche un message d'erreur et demande à l'utilisateur de vérifier et de corriger les informations. 
+            <br>3a.2.   L'utilisateur corrige le numéro de série et soumet à nouveau le formulaire.
+            <br>
+            <br>8a.   Le système rencontre une erreur lors de l'enregistrement du robot.
+            <br> 8a.1.   Le système affiche un message d'erreur général.
+            <br>8a.2.   L'utilisateur réessaye de soumettre le formulaire après un certain temps ou contacte le support technique.
+            <br>
+            <b>Postconditions </b>: Le robot est enregistré et apparaît dans la liste des robots de l’utilisateur. <br>
+        </p>
+
+
+
+
+
+
+
+
+
+
+        <br><br>
         <h3>Cas d'utilisation: 3 - Intervenir lorsqu'il a un problème </h3>
 
         <p> <b>But</b>: Permettre à un utilisateur de diagnostiquer et de résoudre les problèmes survenant avec un robot. <br>
@@ -219,18 +307,61 @@
                 <li>Une fois le problème résolu, l'utilisateur teste le robot pour s'assurer qu'il fonctionne correctement.</li>
                 <li>L'utilisateur enregistre les actions prises et les résultats dans le système pour une future référence.</li>
             </ol>
-            <b>Scénarios alternatifs </b> : <br
+            <b>Scénarios alternatifs </b> :<br><br>
             3a. Le problème n'est pas répertorié dans le système. <br>
 	        3a.1. L'utilisateur contacte directement le support technique pour obtenir une assistance personnalisée. <br>
-            6a. Le robot nécessite des pièces de rechange. <br>
+            <br>6a. Le robot nécessite des pièces de rechange. <br>
 	        6a.1. L'utilisateur commande les pièces nécessaires via la section "Acheter des composants" et procède à la réparation une fois les pièces reçues. <br>
             <b>Postconditions </b>: Le problème est diagnostiqué et résolu, et le robot est remis en service. <br>
         </p>
 
         
-
+        <br><br>
         <h3>Cas d'utilisation: 4 - Construire un robot</h3>
 
+        <p> <b>But</b>: Permettre à un utilisateur de construire un robot en assemblant diverses composantes.<br>
+            <b>Préconditions</b> : L'utilisateur doit être connecté à Robotix et avoir les composants nécessaires disponibles. <br>
+            <b>Acteur principal</b> : Utilisateur. <br>
+        </p>
+        <p><b>Scénario principal</b> :
+            <ol>
+                <li>L'utilisateur accède à la section "Construire un robot" sur la plateforme Robotix.</li>
+            	<li>L'utilisateur sélectionne l'option pour créer un nouveau robot.</li>
+            	<li>Le système demande à l'utilisateur de saisir les informations de base du robot, telles que le nom et le type.</li>
+            	<li>L'utilisateur entre les informations requises et valide.</li>
+                <li>Le système affiche une liste de composants disponibles dans l'inventaire de l'utilisateur.</li>
+                <li>L'utilisateur sélectionne les composants nécessaires pour construire le robot parmi ceux disponibles, y compris au minimum un CPU et au moins une autre composante (par exemple, roues, bras, hélice, etc.)</li>
+                <li>L'utilisateur ajoute chaque composant au panier virtuel.</li>
+                <li>Le système vérifie que toutes les composantes essentielles sont sélectionnées et compatibles entre elles.</li>
+                <li>L'utilisateur reçoit des suggestions pour des composants complémentaires ou nécessaires.</li>
+                <li>L'utilisateur assemble virtuellement le robot en suivant les instructions fournies par le système.</li>
+                <li>Le système confirme que le robot a été construit avec succès, enregistre les détails du robot dans l'inventaire de l'utilisateur, et fournit des recommandations pour les tests initiaux après assemblage.</li>
+                <li>L'utilisateur reçoit ensuite une confirmation que le robot est prêt à être utilisé et peut maintenant être contrôlé via la plateforme.</li>
+            </ol>
+            <b>Scénarios alternatifs </b> :<br><br>
+            <br>6a. L'utilisateur n'a pas tous les composants nécessaires en stock.
+            <br>6a.1. Le système affiche un message demandant à l'utilisateur de commander les composants manquants.
+            <br>6a.2. L'utilisateur passe une commande pour les composants manquants via la plateforme.
+            <br> 6a.3. Une fois les composants reçus, l'utilisateur reprend le processus de construction du robot.
+            <br>
+            <br>8a. Certains composants sélectionnés ne sont pas compatibles. 
+            <br>8a.1. Le système affiche un message d'erreur indiquant les composants incompatibles et propose des alternatives. 
+            <br>8a.2. L'utilisateur ajuste la sélection des composants pour résoudre les incompatibilités.
+            <br>
+            <br>12a. L'utilisateur souhaite annuler l'assemblage.
+            <br>12a.1. Le système confirme la demande d'annulation et demande à l'utilisateur de confirmer.
+            <br>12a.2. Une fois la confirmation reçue, le système annule l'assemblage du robot en cours et supprime les données associées de l'inventaire de l'utilisateur.
+            <br>12a.3. L'utilisateur reçoit une notification de confirmation d'annulation et est redirigé vers la page d'accueil de Robotix.
+            <br>
+            <b>Postconditions </b>: Le robot est construit virtuellement, le plan d'assemblage est généré, et le robot est prêt à être assemblé physiquement. <br>
+        </p>
+
+
+
+
+
+
+        <br><br>
         <h3>Cas d'utilisation: 5 - Acheter des composants </h3>
 
         <p><b>But </b> : Permettre à un utilisateur d'acheter les composants nécessaires pour construire ou réparer des robots.<br/>
@@ -250,16 +381,17 @@
                 	<li>Le système traite le paiement et envoie une confirmation de commande par courriel à l'utilisateur.</li>
                 	<li>Le fournisseur prépare et expédie les composants à l'adresse de livraison indiquée.</li>
             </ol>
-            <b>Scénarios alternatifs </b> : <br/>
+            <b>Scénarios alternatifs </b> : <br><br>
             3a. Un composant est en rupture de stock.<br/>
             3a.1. Le système affiche un message d'indisponibilité et suggère des alternatives ou propose de notifier l'utilisateur lorsque l'article sera de nouveau disponible.<br/>
-            6a. Les informations de paiement sont incorrectes ou insuffisantes.<br/>
+            <br>6a. Les informations de paiement sont incorrectes ou insuffisantes.<br/>
             6a.1. Le système affiche un message d'erreur et demande à l'utilisateur de corriger les informations de paiement.<br/>
-            8a. Le paiement est refusé par la banque.<br/>
+            <br>8a. Le paiement est refusé par la banque.<br/>
             8a.1. Le système affiche un message d'erreur et propose à l'utilisateur de réessayer avec un autre mode de paiement.<br/>
             <b>Postconditions</b> : La commande est passée, les composants sont expédiés et l'utilisateur reçoit une confirmation de commande.
         </p>
 
+        <br><br>
         <h3>Cas d'utilisation: 6 - Chercher un fournisseur</h3>
         <p>
             <b>But</b> : Permettre à un utilisateur de rechercher et de sélectionner des fournisseurs pour acheter des composants ou des services liés aux robots.<br>
@@ -280,10 +412,10 @@
                 <li>Une fois qu'un fournisseur répond aux besoins de l'utilisateur, ce dernier peut sélectionner ce fournisseur pour passer une commande ou demander des devis.</li>
                 <li>Le système enregistre la sélection du fournisseur et permet à l'utilisateur de suivre les communications et les transactions futures avec ce fournisseur.</li>
             </ol>
-            <b>Scénarios alternatifs </b> : <br>
+            <b>Scénarios alternatifs </b> : <br> <br>
             3a. Aucun fournisseur ne correspond aux critères de recherche.<br>
             3a.1. Le système suggère d'élargir les critères de recherche ou de vérifier à nouveau plus tard.<br>
-            5a. L'utilisateur souhaite contacter plusieurs fournisseurs pour des devis.<br>
+            <br>5a. L'utilisateur souhaite contacter plusieurs fournisseurs pour des devis.<br>
             5a.1. Le système permet à l'utilisateur d'envoyer des demandes de devis à plusieurs fournisseurs simultanément.<br>
             <b>Postconditions </b> L'utilisateur a trouvé un fournisseur qui correspond à ses besoins et peut engager des transactions ou des communications avec celui-ci.<br>
         </p>
