--- a/rapport.html
+++ b/rapport.html
@@ -63,11 +63,11 @@
         <span style="font-weight: bold;">temps mis: </span>
     </p>
         <p>
-        <span style="font-weight: bold;">Nom: </span>
+        <span style="font-weight: bold;">Nom:Dean Johan Bell </span>
         <br />
-        <span style="font-weight: bold;">Matricule: </span>
+        <span style="font-weight: bold;">Matricule:20087490 </span>
         <br />
-        <span style="font-weight: bold;">Courriel: </span>
+        <span style="font-weight: bold;">Courriel: dean.johan.bell@umontreal.ca </span>
         <br />
         <span style="font-weight: bold;">temps mis: </span>
     </p>
@@ -92,7 +92,7 @@
                     Cedric Guevremont
                 </th>
                 <th>
-                    Nom
+                    Dean Bell
                 </th>
             </tr>
         </thead>
