--- a/rapport.html
+++ b/rapport.html
@@ -102,16 +102,16 @@
                     Glossaire
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
 		<td>
-                    ?
+                    Oui
                 </td>
             </tr>
             <tr>
@@ -119,16 +119,16 @@
                     Diagrame de Cas d'Utilisation
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
 		<td>
-                    ?
+                    Oui
                 </td>
             </tr>
             <tr>
@@ -136,16 +136,16 @@
                     Cas d'Utilisation
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
 		<td>
-                    ?
+                    Oui
                 </td>
             </tr>
             <tr>
@@ -153,16 +153,16 @@
                     Risques
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
                 <td>
-                    ?
+                    Oui
                 </td>
 		<td>
-                    ?
+                    Oui
                 </td>
             </tr>
             <tr>
@@ -170,7 +170,24 @@
                     Exigences Non-Foncionelles
                 </td>
                 <td>
-                    ?
+                    Oui
+                </td>
+                <td>
+                    Oui
+                </td>
+                <td>
+                    Oui
+                </td>
+		<td>
+                    Oui
+                </td>
+            </tr>
+		 <tr>
+                <td class="first_col">
+                    Prototypage rapide
+                </td>
+                <td>
+                    Oui
                 </td>
                 <td>
                     ?
@@ -179,7 +196,7 @@
                     ?
                 </td>
 		<td>
-                    ?
+                    Non
                 </td>
             </tr>
         </tbody>
