--- a/rapport.html
+++ b/rapport.html
@@ -269,8 +269,10 @@
     <h2>
         Tâche 2</h2>
     <p>
-        ...
+        Pour la deuxième tâche, nous avons convenu que le digramme suivant était approprié pour le cas présent.
     </p>
+    <img src="brouillons/tache2/tache2-1.svg" alt="diagramme UML"/>
+    
     <br><br>
     <h2>
         Tâche 3</h2>
