--- a/rapport.html
+++ b/rapport.html
@@ -33,7 +33,7 @@
         <span style="font-weight: bold;">Nom de l'équipe: </span>Équipe Chomagique
     </p>
     <p>
-        <a href="https://www.github.com/username/project-name">Lien vers dépôt GitHub</a><br>
+        <a href="https://github.com/rimaboujenane/Devoir1-2255">Lien vers dépôt GitHub</a><br>
         <a href="example.vpp">Lien vers fichiers Visual Paradigm</a>
     </p>
     <p>
@@ -271,7 +271,11 @@
     <p>
         Pour la deuxième tâche, nous avons convenu que le digramme suivant était approprié pour le cas présent.
     </p>
+    <p>
+        <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/brouillons/tache2/tache2-1.svg">Lien vers le diagramme github</a>
+    </p>
     <img src="brouillons/tache2/tache2-1.svg" alt="diagramme UML"/>
+    
     
     <br><br>
     <h2>
