--- a/Exigences/rapport.html
+++ b/Exigences/rapport.html
@@ -64,11 +64,11 @@
         <span style="font-weight: bold;">temps mis: </span>
     </p>
     <p>
-        <span style="font-weight: bold;">Nom:Dean Johan Bell </span>
+        <span style="font-weight: bold;">Nom: </span>Dean Johan Bell
         <br />
-        <span style="font-weight: bold;">Matricule:20087490 </span>
+        <span style="font-weight: bold;">Matricule: </span>20087490
         <br />
-        <span style="font-weight: bold;">Courriel: dean.johan.bell@umontreal.ca </span>
+        <span style="font-weight: bold;">Courriel: </span>dean.johan.bell@umontreal.ca
         <br />
         <span style="font-weight: bold;">temps mis: </span>
     </p>
@@ -106,10 +106,10 @@
                     Oui
                 </td>
                 <td>
-                    Oui
+                    25%
                 </td>
                 <td>
-                    Oui
+                    25%
                 </td>
                 <td>
                     Oui
@@ -123,10 +123,10 @@
                     Oui
                 </td>
                 <td>
-                    Oui
+                    0%
                 </td>
                 <td>
-                    Oui
+                    75%
                 </td>
                 <td>
                     Oui
@@ -137,16 +137,16 @@
                     Cas d'Utilisation
                 </td>
                 <td>
-                    Oui
+                    20% (CU 7, 8)
                 </td>
                 <td>
-                    Oui
+                    30% (CU 1, 2, 4)
                 </td>
                 <td>
-                    Oui
+                    30% (CU 3, 5, 6)
                 </td>
                 <td>
-                    Oui
+                    20% (CU 9, 10)
                 </td>
             </tr>
             <tr>
@@ -157,10 +157,10 @@
                     Oui
                 </td>
                 <td>
-                    Oui
+                    70%
                 </td>
                 <td>
-                    Oui
+                    0%
                 </td>
                 <td>
                     Oui
@@ -174,10 +174,10 @@
                     Oui
                 </td>
                 <td>
-                    Oui
+                    70%
                 </td>
                 <td>
-                    Oui
+                    0%
                 </td>
                 <td>
                     Oui
@@ -191,10 +191,10 @@
                     Oui
                 </td>
                 <td>
-                    ?
+                    0%
                 </td>
                 <td>
-                    ?
+                    10%
                 </td>
                 <td>
                     Non
@@ -202,11 +202,7 @@
             </tr>
         </tbody>
     </table>
-    <h2>
-        Hypothèses</h2>
-    <p>
-        J'ai supposé que...
-    </p>
+
     <br><br>
     <h2>
         Tâche 1</h2>
@@ -259,12 +255,8 @@
     <p> <b>Unité</b> : Une mesure standard utilisée pour quantifier un type de données, telle que les secondes pour le
         temps ou
         les mètres pour la distance.</p>
-
     </p>
-    <ul>
-        <li>Voici un <a href="file1.txt">lien</a> vers les fichiers.</li>
-        <li>Images affichées directement.</li>
-    </ul>
+
     <br><br>
     <h2>
         Tâche 2</h2>
@@ -272,11 +264,12 @@
         Pour la deuxième tâche, nous avons convenu que le digramme suivant était approprié pour le cas présent.
     </p>
     <p>
-        <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/brouillons/tache2/tache2-1.svg">Lien vers le diagramme github</a>
+        <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/brouillons/tache2/tache2-1.svg">Lien vers le
+            diagramme github</a>
     </p>
-    <img src="brouillons/tache2/tache2-1.svg" alt="diagramme UML"/>
-    
-    
+    <img src="brouillons/tache2/tache2-1.svg" alt="diagramme UML" />
+
+
     <br><br>
     <h2>
         Tâche 3</h2>
@@ -547,9 +540,9 @@
     <p>
         <b>Scénario principal</b> :
     <ol>
-        <li>1. L'utilisateur accède à la plateforme Robotix.</li>
-        <li>2. Il ouvre son inventoire pour voir quelles composantes il possède déjà.</li>
-        <li>3.</li>
+        <li>L'utilisateur accède à la plateforme Robotix.</li>
+        <li>Il ouvre son inventoire pour voir quelles composantes il possède déjà.</li>
+        <li></li>
         <ul>
             <li>3.1. L'utilisateur choisit parmi les composantes dans son inventoire pour programmer un mouvement.</li>
             <li>3.2. Ensuite, il doit nommer le mouvement et préciser les détails du mouvement.</li>
@@ -558,7 +551,7 @@
             <li>3.4. Il répète se procedure pour plusieurs composantes, pour qu'il puisse passer éventuellement à la
                 prochaine étape: la programmation des opérations, qui se composent de plusieurs mouvements.</li>
         </ul>
-        <li>4. Les mouvements restent inutiles jusqu'au moment où ils sont chargés dans le CPU d'un robot qui possède la
+        <li>Les mouvements restent inutiles jusqu'au moment où ils sont chargés dans le CPU d'un robot qui possède la
             composante en question.</li>
     </ol>
     <b>Scénarios alternatifs </b> : <br>
@@ -583,17 +576,17 @@
     <p>
         <b>Scénario principal</b> :
     <ol>
-        <li>1. L'utilisateur accède à la plateforme Robotix.</li>
-        <li>2. Il crée une action en spécifiant</li>
+        <li>L'utilisateur accède à la plateforme Robotix.</li>
+        <li>Il crée une action en spécifiant</li>
         <ul>
-            <li>2.1. Un nom</li>
-            <li>2.2. Une série de mouvements d'une composante ou plusieurs.</li>
-            <li>2.3. Par exemple, il pourrait créer l'action "photo panorama" en spécifiant une série de "rotations 45
+            <li>Un nom</li>
+            <li>Une série de mouvements d'une composante ou plusieurs.</li>
+            <li>Par exemple, il pourrait créer l'action "photo panorama" en spécifiant une série de "rotations 45
                 degrés" suivi par "prendre photo".</li>
         </ul>
-        <li>3. Avec ces opérations, on peut construire des tâches encore plus complexes qui se composent non seulement
+        <li>Avec ces opérations, on peut construire des tâches encore plus complexes qui se composent non seulement
             de plusieurs actions, mais de différents robots.</li>
-        <li>4. Similaires aux mouvements, les actions sont inutiles avant d'être chargées dans le CPU d'un robot qui
+        <li>Similaires aux mouvements, les actions sont inutiles avant d'être chargées dans le CPU d'un robot qui
             possède toutes les composantes nécéssaires pour l'action.</li>
     </ol>
     <b>Scénarios alternatifs </b> : <br>
@@ -617,11 +610,11 @@
     <p>
         <b>Scénario principal</b>:
     <ol>
-        <li>1. L'utilisateur accède à la plateforme Robotix.</li>
-        <li>2. L'utilisation crée une nouvelle tâche en sélectionnant une séquence d'actions.</li>
-        <li>3. L'utilisateur assigne la tâche à un robot disponible.</li>
-        <li>4. L'utilisateur planifie la tâche pour une exécution immédiate ou à une date/heure spécifique.</li>
-        <li>5. Le système enregistre la tâche et envoie les instructions au robot.</li>
+        <li>L'utilisateur accède à la plateforme Robotix.</li>
+        <li>L'utilisation crée une nouvelle tâche en sélectionnant une séquence d'actions.</li>
+        <li>L'utilisateur assigne la tâche à un robot disponible.</li>
+        <li>L'utilisateur planifie la tâche pour une exécution immédiate ou à une date/heure spécifique.</li>
+        <li>Le système enregistre la tâche et envoie les instructions au robot.</li>
     </ol>
     <b>Scénarios alternatifs </b> : <br>
     3a. Si aucun robot n'est disponible , le système affiche un message d'erreur.<br>
@@ -640,62 +633,14 @@
     <p>
         <b>Scénario principal</b>:
     <ol>
-        <li>1. L'utilisateur accède à la plateforme Robotix.</li>
-        <li>2. L'utilisation va sur l'interface de visualisation de l'état des robots.</li>
-        <li>3. Le système affiche l'état actuel des robots (position, vitesse, niveau de batterie, consommation CPU et
+        <li>L'utilisateur accède à la plateforme Robotix.</li>
+        <li>L'utilisation va sur l'interface de visualisation de l'état des robots.</li>
+        <li>Le système affiche l'état actuel des robots (position, vitesse, niveau de batterie, consommation CPU et
             mémoire).</li>
     </ol>
     <b>Scénarios alternatifs </b> : <br>
     2a. Si le système ne peut pas récupérer les données, le système affiche un message d'érreur<br>
     <b>Postconditions </b> L'utilisateur peut voir l'état actuel des robots.<br>
-    </p>
-
-
-    <br><br>
-    <h3>Cas d'utilisation:11 - Afficher les métriques</h3>
-    <p>
-        <b>But</b>:Permettre à un utilisateur de visualiser les métriques globales des robots.<br>
-        <b>Préconditions</b>:L'utilisateur doit être connecté au système.<br>
-        <b>Acteurs:</b>: Utilisateur(principal)<br>
-    </p>
-    <p>
-        <b>Scénario principal</b>:
-    <ol>
-        <li>1. L'utilisateur accède à la plateforme Robotix.</li>
-        <li>2. L'utilisation accède l'interface de visualisation des métriques des robots.</li>
-        <li>3. Le système affiche les métriques agrégées par période (disponibilité des roots, état général, utilisation
-            globale).</li>
-    </ol>
-    <b>Scénarios alternatifs </b> : <br>
-    2a. Si le système ne peut pas récupérer les données, le système affiche un message d'érreur<br>
-    <b>Postconditions</b>: L'utilisateur peut voir les métriques de performance des robots.<br>
-    </p>
-
-
-    <br><br>
-    <h3>Cas d'utilisation:12 - S'inscrire comme fournisseur</h3>
-    <p>
-        <b>But</b>:Permettre à une entreprise de s'inscrire comme fournisseur de composants des robots.<br>
-        <b>Préconditions</b>:L'utilisateur doit avoir une entreprise et un compte comme les utilisateurs.<br>
-        <b>Acteurs:</b>: Fournisseur(principal)<br>
-    </p>
-    <p>
-        <b>Scénario principal</b>:
-    <ol>
-        <li>1. Le fournisseur accède à la plateforme Robotix.</li>
-        <li>2. Le fournisseur accède à l'interface d'inscription.</li>
-        <li>3. Le Fournisseur saisit les informations obligatoires(nom, adresse,email,téléphone, capacité de
-            fabrication).</li>
-        <li>4. Le système vérifie que le nom(pseudo) soit unique.</li>
-        <li>5. Le système enregistre les informations du fournisseur.</li>
-        <li>6. Le fournisseur reçoit une confirmation d'inscription par courriel.</li>
-    </ol>
-    <b>Scénarios alternatifs </b> : <br>
-    4a. Si le nom(pseudo) n'est pas unique, le système affiche un message d'érreur et demande au fournisseur de modifier
-    le nom(pseudo)<br>
-    3a. Si les informations fournies sont incomplètes, le système demande de les compléter.<br>
-    <b>Postconditions</b>: Un nouveau compte de fournisseur est créée et l'entreprise est enregistrée dans le systàme
-    comme fournisseur de composantes de robots.<br>
     </p>
 
     <br><br>
